--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bGlnaHQtcG9sbGl3b2ctNjIuY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY=sk_test_79F52tVQ43Ylr4itW1iIZCW5baWQO6izV188Tjo32i
 
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=dashboard/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=dashboard/sign-up
+
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
@@ -8,4 +11,6 @@ CLERK_SECRET_KEY=sk_test_79F52tVQ43Ylr4itW1iIZCW5baWQO6izV188Tjo32i
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
+
+DATABASE_URL="postgresql://healthhub_owner:WtrkMTI9CE0V@ep-wispy-star-a1u17wfg.ap-southeast-1.aws.neon.tech/healthhub?sslmode=require"
