--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.8",
+    "@neondatabase/serverless": "^0.9.4",
+    "@prisma/client": "^5.17.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
@@ -21,6 +23,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "prisma": "^5.17.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
